--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -5,6 +5,13 @@
     font-weight: normal;
 }
 
+@font-face {
+    font-family: "Flexi IBM VGA False";
+    src: url("flexi-ibm-vga-false.woff") format("woff");
+    font-style: normal;
+    font-weight: normal;
+}
+
 html {
     height: 100%;
 }
