--- a/_sass/layouts/mailbox.scss
+++ b/_sass/layouts/mailbox.scss
@@ -12,7 +12,7 @@
         flex: 1 1 auto;
         height: 48px;
         margin: 0 $narrow-gap;
-        background: url("marquee-bg.gif") #000000;
+        background: url("marquee-bg.gif") $marquee-bg-color;
         font-size: 32px;
         line-height: 48px;
         @include inset-border;
