--- a/_sass/config.scss
+++ b/_sass/config.scss
@@ -47,3 +47,7 @@ $input-height: 24px;
 
 // media queries
 $column-width: 640px;
+
+// cursors
+$arrow-cursor: url("arrow.cur"), default;
+$hand-cursor: url("hand.cur"), pointer;
