--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -16,7 +16,7 @@ html {
     height: 100%;
 }
 html, body {
-    cursor: url("arrow.cur"), default;
+    cursor: $arrow-cursor;
 }
 body {
     color: $text-color;
@@ -59,6 +59,7 @@ h1, h2, h3, h4, h5, h6 {
 a {
     color: $link-color;
     text-decoration: underline;
+    cursor: $hand-cursor;
 }
 
 // block elements
@@ -105,6 +106,7 @@ input, button {
     margin: 0;
     height: $input-height;
     line-height: 1.0;
+    cursor: $arrow-cursor;
 }
 input:focus, button:focus {
     outline: none;
@@ -115,7 +117,6 @@ button {
     font-family: $text-font-family;
     font-size: $text-font-size;
 
-    cursor: url("pointer.cur"), pointer;
     @include outset-border;
 
     &:enabled:active {
@@ -129,7 +130,6 @@ input[type=range] {
     padding: 0;
     //width: 100%;
     background: transparent;
-    cursor: pointer;
 }
 
 @mixin range-thumb {
