Added noscript warning and cleaned up README

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -33,6 +33,7 @@
         <meta property="og:image" content="{%- include static_url.fn filename='cover.gif' -%}" />
     </head>
     <body class="base">
+        <noscript class="base-noscript">This website uses JavaScript to play audio.<br/>Please enable scripting for the full experience.</noscript>
         <div class="base-window">
             <header class="base-header">
                 <div class="base-title">{{ page.title | escape }}</div>
