--- a/_sass/layouts/base.scss
+++ b/_sass/layouts/base.scss
@@ -1,10 +1,29 @@
 
 // site layout
 .base {
+    position: relative;
     max-width: $column-width;
     margin: 0 auto;
     padding: $wide-gap;
 
+    &-noscript {
+        position: absolute;
+        top: $medium-gap;
+        right: $medium-gap;
+        //bottom: $medium-gap;
+        left: $medium-gap;
+        padding: $wide-gap;
+
+        color: $error-color;
+        background: $error-bg-color;
+
+        font-family: $code-font-family;
+        font-size: $code-font-size;
+        font-weight: bold;
+        text-align: center;
+
+        @include outset-border;
+    }
     &-window {
         background-color: $window-bg-color;
         margin-bottom: $narrow-gap;
@@ -22,8 +41,6 @@
     }
 
     &-header {
-
-
     }
 
     &-body {
