Set marquee as page description for pages that don't have a body

--- a/_includes/party_text.html
+++ b/_includes/party_text.html
@@ -13,7 +13,7 @@
     {%- if _character == " " -%}
         &nbsp;
     {%- else -%}
-        {{- _character -}}
+        {{- _character | escape -}}
     {%- endif -%}
     </span>
 {%- endfor -%}
