Added markdown parsing for memos and handling for links in the message table

--- a/_includes/date.html
+++ b/_includes/date.html
@@ -9,3 +9,5 @@
 {%- assign _format = "%Y/%m/%d %l:%M %p %Z" -%}
 
 <time datetime="{{ include.date | date_to_xmlschema }}">{{ include.date | date: _format }}</time>
+
+{%- comment -%}Remove trailing whitespace{%- endcomment -%}
