--- a/_layouts/mailbox.html
+++ b/_layouts/mailbox.html
@@ -51,7 +51,7 @@ layout: base
                 <td class="mailbox-message-number">{{ forloop.length | minus: forloop.index0 }}</td>
                 <td class="mailbox-message-date">{% include date.html date=message.date %}</td>
                 <td class="mailbox-message-duration">{{ message.duration }}</td>
-                <td class="mailbox-message-memo">{{ message.memo | escape }}</td>
+                <td class="mailbox-message-memo">{{ message.memo | markdownify | strip_newlines | remove: "<p>" | remove: "</p>" | remove: "\n" }}</td>
             </tr>
             {%- endfor %}
         </table>
