Modified site layout to fit to viewport so that mailbox controls would always be visible

--- a/_layouts/mailbox.html
+++ b/_layouts/mailbox.html
@@ -42,10 +42,10 @@ layout: base
         <table id="mailbox-table" class="mailbox-table" data-sorted-by="0">
             <thead>
                 <tr>
-                    <th class="mailbox-header-narrow" data-type="number" data-order="descending">#</th>
-                    <th class="mailbox-header-narrow" data-type="time">Date</th>
-                    <th class="mailbox-header-narrow" data-type="duration">Length</th>
-                    <th data-type="text">Memo</th>
+                    <th class="mailbox-header mailbox-header-narrow" data-type="number" data-order="descending">#</th>
+                    <th class="mailbox-header mailbox-header-narrow" data-type="time">Date</th>
+                    <th class="mailbox-header mailbox-header-narrow" data-type="duration">Length</th>
+                    <th class="mailbox-header " data-type="text">Memo</th>
                 </tr>
             </thead>
             <tbody>
