Dropped timezone to shorten date

--- a/_includes/date.html
+++ b/_includes/date.html
@@ -6,7 +6,7 @@
 {%- endcomment -%}
 
 
-{%- assign _format = "%Y/%m/%d %l:%M %p %Z" -%}
+{%- assign _format = "%Y/%m/%d %l:%M %p" -%}
 
 <time datetime="{{ include.date | date_to_xmlschema }}">{{ include.date | date: _format }}</time>
 
