Adjusted noscript styles

--- a/_sass/layouts/base.scss
+++ b/_sass/layouts/base.scss
@@ -9,10 +9,10 @@
 
     &-noscript {
         position: absolute;
-        top: $medium-gap;
-        right: $medium-gap;
-        //bottom: $medium-gap;
-        left: $medium-gap;
+        top: $wide-gap;
+        right: $wide-gap;
+        //bottom: $wide-gap;
+        left: $wide-gap;
         padding: $wide-gap;
 
         color: $error-color;
