--- a/_layouts/mailbox.html
+++ b/_layouts/mailbox.html
@@ -66,7 +66,7 @@ layout: base
 <script>
     (function() {
         mailbox.init('#mailbox', '{{ site.baseurl }}/messages/', function(message) {
-            umami.track('Message.' + message.id + ': ' + message.memo);
+            umami.track('play[' + message.id + '] ' + message.memo);
         });
         table.init('#mailbox-table');
     })();
